--- a/style/package.ini
+++ b/style/package.ini
@@ -1,6 +1,6 @@
-Name = Dark
-Type = Style
-Author = RandomHost
-Version = 1.0.1
-Platforms =
-Description = "A dark theme which looks surprisingly similar to another popular voice communication software. How did that happen?"
+Name        = "Dark Theme with Extended Info"
+Type        = Style
+Author      = Roshke
+Version     = 1.0.0
+Platforms   = 
+Description = "An edit of the Dark Theme (original by RandomHost) with additional Client, Server Information and Nicer colors."
